--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 <meta property="og:image:width" content="1200"/>
 <meta property="og:image:height" content="630"/>
 
-<title>Hello AWS App Runner</title>
+<title>Hello App Runner new auto deployment</title>
 <style>
 
 /* open-sans-regular - latin */
